# QC_master_theisis_work

./: README.md  qiskitcoding.py
Intern_Job_Project/: CMakeLists.txt  MainEngine_nv_gw.py  main.py
Intern_Job_Project/Plot_Analyze/analysis/: cmpg_sensing.py
Intern_Job_Project/Plot_Analyze/bindings/: bindings.cpp
Intern_Job_Project/Python/analysis/: cmpg_sensing.py
Intern_Job_Project/Python/bindings/: nv_bindings.cpp
Intern_Job_Project/Python/visualization_simulate/: visualize.py
Intern_Job_Project/benchmarks/: runtime_benchmarks.cpp
Intern_Job_Project/cpp/include/Hamiltonians/: Halmilt_Eigen_combo.cpp
Intern_Job_Project/cpp/include/QuantumGrav/: QuantumTypes.h  QuantumTypes.hpp
Intern_Job_Project/cpp/include/Spinor_Tetrad/: dirac_spinor.cpp
Intern_Job_Project/cpp/include/nvgw/: utils.h
Intern_Job_Project/cpp/include/solvers/: IntegratorRK4.hpp  SchrødingerSolver.hpp  engine.hpp  integrator.h  lindblad.hpp
Intern_Job_Project/cpp/src/Hamiltonians/: Nv_hamiltonian.cpp
Intern_Job_Project/python/: config.py  main.py  nv_quantum_setup.py
Intern_Job_Project/python/nvgw/: gw_signals.py  protocols.py  system.py
Intern_Job_Project/python/scripts/: Solver.py  nv_quantum_setup.py  run_cpmg.py
Intern_Job_Project/src/: MainEngine_nv_gw.py  bindings.cpp  integrator.h  main_clean_nv_gw.py  prototype2.py  prototype_ver2.py  prototype_ver3.py
Intern_Job_Project/src/io_input_output/: config.py
Intern_Job_Project/src/libenvgw/: nv_quantum_setup.py
Intern_Job_Project/src/python/: engine.py
Intern_Job_Project/tests/: prototype_ver3.py
(+261 files in other folders)
